services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
spec:
  ports:
    - name: service-http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    name: application-api
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: endpoints-api
spec:
  ports:
    - name: endpoints-http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: application-api
  type: NodePort
