ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.global-static-ip-name: global-loadbalancer
spec:
  tls:
    - secretName: tls-secret
  rules:
    - host: application-api.hacksantiago.cl
      http:
        paths:
          - backend:
              serviceName: service-api
              servicePort: 3000
        - path: /api/*
          backend:
            serviceName: endpoints-api
            servicePort: 8080
